# jeviterm

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  iterm-api.pb  qemu-jeviterm.patch
cmake/: git_watcher.cmake
include/: jeviterm.h  jeviterm.h.in
lib/: CMakeLists.txt  iterm-api.pb.cpp  iterm-api.pb.h  jeviterm.mm  jeviterm.pc.in
tools/: CMakeLists.txt  jevitermctl.mm  jevitermtest.c
